mlops/infra/k8s/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elyssa
---
apiVersion: v1
kind: Namespace
metadata:
  name: elyssa-monitoring
